--- a/graphsizeplot/assets/style.css
+++ b/graphsizeplot/assets/style.css
@@ -5,3 +5,6 @@
 .rc-slider-dot-active , .rc-slider-handle {
     border: 2px solid #003E5C
 }
+.rc-slider-handle:hover{
+    border: 2px solid #003E5C
+}
