--- a/pieplot/assets/slider.css
+++ b/pieplot/assets/slider.css
@@ -7,3 +7,6 @@
 .rc-slider-dot-active,.rc-slider-dot-active{
     border-color : #d2330e;
 }
+.rc-slider-handle:hover{
+    border-color : #d2330e;
+}
