--- a/graphsizeplot/assets/style.css
+++ b/graphsizeplot/assets/style.css
@@ -8,3 +8,11 @@
 .rc-slider-handle:hover{
     border: 2px solid #003E5C
 }
+.Select--multi .Select-value{
+    color : #333;
+    background-color: #e9e9e9;
+    border: 1px solid #333;
+}
+.Select--multi .Select-value-icon{
+    border-right:1px solid #333;
+}
