--- a/graphsizeplot/assets/style.css
+++ b/graphsizeplot/assets/style.css
@@ -1,4 +1,4 @@
-.rc-slider-rail , .rc-slider-step {
+.rc-slider-track {
     background-color: #003E5C;
 }
 
@@ -8,6 +8,9 @@
 .rc-slider-handle:hover{
     border: 2px solid #003E5C
 }
+
+
+
 .Select--multi .Select-value{
     color : #333;
     background-color: #e9e9e9;
